# A2UI

./: README.md  mkdocs.yaml  renderer_detailed_flow_diagram.md  restaurant_finder_high_level_flow.md  restaurant_finder_sequence_diagram.md  shell_client_explanation.md
.gemini/: GEMINI.md
Examples/: a2ui_card_example.json  calculator_ui.json  clickable_rows_card.json  depth_page.json  prompt1.json
a2a_agents/python/a2ui_extension/: README.md  pyproject.toml
a2a_agents/python/a2ui_extension/src/a2ui/: a2ui_extension.py  send_a2ui_to_client_toolset.py
a2a_agents/python/a2ui_extension/tests/: test_a2ui_extension.py  test_a2ui_schema_utils.py  test_send_a2ui_to_client_toolset.py
docs/: community.md  index.md  quickstart.md
docs/guides/: agent-development.md  client-setup.md
docs/introduction/: agent-ui-ecosystem.md
docs/reference/: components.md  messages.md
docs/specification/: v0.8-a2a-extension.md  v0.8-a2ui.md  v0.9-a2ui.md  v0.9-evolution-guide.md
renderers/angular/: package-lock.json  package.json  postprocess-build.mjs
renderers/lit/: package.json
samples/agent/adk/: package-lock.json  pyproject.toml
samples/client/angular/: angular.json  package-lock.json  package.json
samples/client/lit/: package-lock.json  package.json
specification/v0_8/docs/: a2ui_protocol.md
specification/v0_9/docs/: a2ui_protocol.md  evolution_guide.md
specification/v0_9/json/: a2ui_client_capabilities.json  client_to_server.json  common_types.json  server_to_client.json  (+1 more)
tools/editor/: package-lock.json
tools/inspector/: package-lock.json
(+48 files in other folders)
