[project]
name = "a2ui"
version = "0.1.0"
description = "A2UI Extension"
readme = "README.md"
requires-python = ">=3.10"
dependencies = ["a2a-sdk>=0.3.0"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[[tool.uv.index]]
url = "https://pypi.org/simple"
default = true

[tool.pyink]
unstable = true
target-version = []
pyink-indentation = 2
pyink-use-majority-quotes = true
pyink-annotation-pragmas = [
  "noqa",
  "pylint:",
  "type: ignore",
  "pytype:",
  "mypy:",
  "pyright:",
  "pyre-",
]

